--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="25sp"
+            android:textSize="14dp"
             android:fontFamily="sans-serif"
             android:textColor="#212121"
             android:layout_marginStart="10dp"
@@ -42,7 +42,7 @@
             app:layout_constraintEnd_toEndOf="@id/tvTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp"
+            android:textSize="10dp"
             android:fontFamily="sans-serif"
             android:text="This is a very long title and here it is"
             />
